# simpleRDBMS

./: .gitignore  BUILDING.md  CMakeLists.txt  CONSTRAINT_ARCHITECTURE.md  CONTRIBUTING.md  DATA_PERSISTENCE_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  FINAL_STATUS_PHASE4.md  IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_CHECKLIST.md  PHASE_4_COMPLETION.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_DOCUMENTATION_INDEX.md  PHASE_4_SUMMARY.md  PHASE_4_TEST_RESULTS.md  PHASE_5_ARCHITECTURE.md  PHASE_5_COMPLETION_CHECKLIST.md  PHASE_5_DATA_PERSISTENCE_REPORT.md  PHASE_5_DOCUMENTATION_INDEX.md  PHASE_5_FINAL_STATUS.md  PHASE_5_INITIALIZATION.md  PHASE_5_SUMMARY.md  PHASE_5_TEST_RESULTS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  TABLE_DISPLAY_FEATURE.md  TABLE_DISPLAY_QUICK_START.md  build.bat  build.sh  test_persistence_integration.cpp  test_storage.cpp
data/: system_users.json  todos.json  todos_schema.json  users2_schema.json  users3_schema.json  users4.json  users4_schema.json  users_schema.json
persistence_test_data/: products.json  products_schema.json
simpletodo/: index.html  package-lock.json  package.json
simpletodo/src/: App.css  App.jsx
src/: main.cpp
src/core/: column.cpp  column.h  constraint.cpp  constraint.h  data_type.cpp  data_type.h  index.cpp  index.h  query_executor.cpp  query_executor.h  query_result.h  table_manager.cpp  table_manager.h  table_schema.cpp  table_schema.h  transaction_manager.cpp  transaction_manager.h  user_manager.cpp  user_manager.h  value.cpp  value.h
src/parser/: ast_nodes.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
src/server/: db_server.cpp  db_server.h
src/storage/: storage_engine.cpp  storage_engine.h
src/ui/: create_table_dialog.cpp  create_table_dialog.h  login_dialog.cpp  login_dialog.h  logs_page.cpp  logs_page.h  main_window.cpp  main_window.h  sql_editor_page.cpp  sql_editor_page.h  table_manager_page.cpp  table_manager_page.h
src/utils/: logger.cpp  logger.h
test_data/: users.json  users_schema.json
tests/: CMakeLists.txt  test_constraints.cpp
